plugins {
    id 'java'
    id 'maven-publish'
}

group = 'io.github.divios'
version = '1.2'

sourceCompatibility = 1.8 // java 8
targetCompatibility = 1.8

repositories {
    mavenCentral()
    mavenLocal()
    maven { url = "https://jitpack.io" }
    maven {
        name = 'spigotmc-repo'
        url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
    }
    maven {
        name = 'placeholderapi'
        url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/'
    }
    maven {
        url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/'
    }
}

dependencies {
    implementation 'org.jetbrains:annotations:22.0.0'
    compileOnly 'org.spigotmc:spigot-api:1.18.1-R0.1-SNAPSHOT'
    compileOnly 'me.clip:placeholderapi:2.11.1'

    testImplementation('junit:junit:4.13.2')
    testImplementation "org.mockito:mockito-core:1.9.5"
    testImplementation 'org.powermock:powermock-module-junit4:2.0.9'
    testImplementation 'org.powermock:powermock-api-mockito2:2.0.9'
    testImplementation 'com.github.seeseemelk:MockBukkit-v1.16:1.5.2'
}


processResources {
    def props = [version: version]
    inputs.properties props
    filteringCharset 'UTF-8'
    filesMatching('plugin.yml') {
        expand props
    }
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            groupId = 'com.github.divios'
            artifactId = 'jText'
            version = '1.0'

            from components.java
        }
    }
}

compileJava.dependsOn(clean)
